# guarded-whatsapp-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
assets/: architecture.html  banner.html
config/: allowlist.example.yaml
demo/: demo.py  demo.tape
src/wa_guard/: __init__.py  audit.py  bridge.py  config.py  guard.py  server.py
tests/: test_guard.py
