[project]
name = "nene-whatsapp-guard"
version = "0.1.0"
description = "A governed WhatsApp MCP server: allowlist, secret scanning, file validation, rate limiting, confirmation gate, and audit log."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Peter / FutureFarm AI" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nene-whatsapp-guard = "wa_guard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
