[project]
name = "guarded-whatsapp-mcp"
version = "0.1.0"
description = "Govern & automate WhatsApp safely for AI agents: an MCP server with an allowlist, secret scanning, file validation, rate limiting, a confirmation gate, and an audit log."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Peter / FutureFarm AI" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
guarded-whatsapp-mcp = "wa_guard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
